--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=APIGATEWAY
+spring.application.name=ApiGateWay
 server.port=8080
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -9,3 +9,12 @@ spring.main.web-application-type=reactive
 # Logging for Debugging
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.reactor.netty=DEBUG
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=seha
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
