--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>Common</module>
 		<module>UserManagementService</module>
 		<module>OdbListhenService</module>
+		<module>ReportService</module>
 	</modules>
     <scm>
 		<connection/>
