--- a/SearchingService/src/main/resources/application.properties
+++ b/SearchingService/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+spring.application.name=SEARCHSERVICE
+server.port=8083
 
-spring.application.name=USERSERVICE
-server.port=8081
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=192.168.1.10
+
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/fueloptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
@@ -12,5 +14,6 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcA
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.reactor.netty=DEBUG
