--- a/OdbListhenService/pom.xml
+++ b/OdbListhenService/pom.xml
@@ -19,7 +19,11 @@
 
         <!-- Spring Kafka -->
 
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.10.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.kafka</groupId>
