--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,8 @@
 		<module>UserManagementService</module>
 		<module>OdbListhenService</module>
 		<module>ReportService</module>
-	</modules>
+        <module>SearchingService</module>
+    </modules>
     <scm>
 		<connection/>
 		<developerConnection/>
