--- a/ReportService/pom.xml
+++ b/ReportService/pom.xml
@@ -53,8 +53,12 @@
             <version>3.8.0</version> <!-- Use the latest version -->
         </dependency>
 
-        <!-- Report Service -->
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.0.2</version> <!-- Adjust version as per your Spring Boot version -->
+        </dependency>
 
     </dependencies>
 </project>
