--- a/ReportService/src/main/resources/application.properties
+++ b/ReportService/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.application.name=ReportService
+spring.application.name=REPORTSERVICE
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Mysql123?
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
+spring.datasource.password=seha
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=192.168.1.10
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 
 logging.level.org.springframework=ERROR
 server.port=8086
