--- a/ChartsService/src/main/resources/application.properties
+++ b/ChartsService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=OdbListhenService
+spring.application.name=ChartsService
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gp?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=seha
+spring.datasource.password=123456789@..
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.security=DEBUG
 
 logging.level.org.springframework=ERROR
-server.port=8086
+server.port=8089
