--- a/UserManagementService/src/main/resources/application.properties
+++ b/UserManagementService/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.instance.ip-address=192.168.1.10
 
 spring.datasource.url=jdbc:mysql://localhost:3306/fueloptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=seha
+spring.datasource.password=123456789@..
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
