Report Service Added

--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,14 @@
 	</developers>
     <modules>
         <module>OdbMockProducer</module>
-		<module>ApiGateway</module>
+
 		<module>Common</module>
 		<module>UserManagementService</module>
 		<module>OdbListhenService</module>
 		<module>ReportService</module>
         <module>SearchingService</module>
-    </modules>
+		<module>APIGateway</module>
+	</modules>
     <scm>
 		<connection/>
 		<developerConnection/>
