--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ApiGateWay
+spring.application.name=APIGateway
 server.port=8080
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
