--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=EurekaServer
 server.port=8761
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+
+
+eureka.client.fetch-registry=true
+eureka.client.registry-fetch-interval-seconds=5
+eureka.instance.prefer-ip-address=true
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.lease-expiration-duration-in-seconds=30
