--- a/ReportService/src/main/resources/application.properties
+++ b/ReportService/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=REPORTSERVICE
+server.port=8086
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=192.168.1.10
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=seha
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=192.168.1.10
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -15,4 +17,8 @@ spring.jpa.hibernate.ddl-auto=update
 #logging.level.org.springframework.security=DEBUG
 
 logging.level.org.springframework=ERROR
-server.port=8086
+
+
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.lease-expiration-duration-in-seconds=30
+server.connection-timeout=5000
