--- a/Common/src/main/resources/application.properties
+++ b/Common/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=OdbListhenService
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456789@..
+spring.datasource.password=root
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
