--- a/ChartsService/src/main/resources/application.properties
+++ b/ChartsService/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.security=DEBUG
 
 logging.level.org.springframework=ERROR
+
+logging.level.com.zaxxer.hikari=warn
+
 server.port=8089
