--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=APIGateway
 server.port=8080
 
-eureka.client.service-url.defaultZone=http://192.168.1.10:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
 eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=192.168.1.10
+#eureka.instance.ip-address=192.168.1.10
+
+
 spring.main.web-application-type=reactive
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
