--- a/ChartsService/src/main/resources/application.properties
+++ b/ChartsService/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=ChartsService
+server.port=8089
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456789@..
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
+spring.main.web-application-type=reactive
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
@@ -14,4 +19,5 @@ logging.level.org.springframework=ERROR
 
 logging.level.com.zaxxer.hikari=warn
 
-server.port=8089
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty=DEBUG
