--- a/ReportService/src/main/resources/application.properties
+++ b/ReportService/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=REPORTSERVICE
 server.port=8086
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=192.168.1.10
+eureka.instance.ip-address=192.168.1.10g
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=seha
+spring.datasource.password=123456789@..
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
