--- a/ChartsService/src/main/resources/application.properties
+++ b/ChartsService/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456789@..
+spring.datasource.password=seha
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
 spring.main.web-application-type=reactive
