--- a/ReportService/src/main/resources/application.properties
+++ b/ReportService/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/FuelOptimization?createDatabaseIfNotExists=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456789@..
+spring.datasource.password=Mysql123?
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
@@ -22,4 +22,4 @@ logging.level.org.springframework=ERROR
 
 eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=30
-server.connection-timeout=5000
+#server.connection-timeout=5000
